# Intake

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  package.yml  pages.yml  publish-stable.yml  release.yml
docs/: APP_CAPABILITIES.md  ARCHITECTURE.md  ARCHITECTURE_V1.md  BADGES.md  CONTAINER.md  DEMO.md  FINAL_PRODUCT_CHECKLIST.md  IMPLEMENTATION_PLAN.md  OPERATIONS.md  OPERATIONS_CONTROL_PLANE.md  OPERATOR_CONSOLE.md  PACKAGING.md  PROJECT_STATUS.md  QA.md  README.md  RELEASE.md  RELEASE_NOTES_1.0.0.md  RELEASE_NOTES_1.0.0rc1.md  RELEASE_QUALITY_PLAN.md  ROADMAP.md  SDK.md  SECURITY_BOUNDARY.md  SUPPLY_CHAIN.md  THREAT_MODEL.md  VALIDATION_STATUS.md  index.html
examples/: engagement.yaml  sdk_quickstart.py
examples/env/: production.env.example
examples/http/: intake.http
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_audit_logs.py  0003_execution_jobs.py
policies/: intake.rego
release/: manifest-1.0.0.json
scripts/: entrypoint.sh  seed_demo.py  smoke.sh
src/intake/: __init__.py  __main__.py  api.py  audit.py  auth.py  cli.py  client.py  config.py  db.py  evidence.py  jobs.py  lifecycle.py  models.py  ops.py  ops_api.py  orchestrator.py  platform.py  policy.py  release_api.py  release_cli.py  release_schemas.py  reporting.py  runtime_schemas.py  schemas.py  scope.py  services.py  storage.py  tool_broker.py  tool_runtime.py  web.py  worker.py
src/intake/orchestration/: __init__.py  graph.py
src/intake/tools/: __init__.py  artifact.py  base.py  ghidra.py  registry.py  rizin.py
src/intake/workers/: __init__.py  dynamic.py  external_static.py  local_static.py  static.py
tests/: test_api_contracts.py  test_artifact_dedup.py  test_auth.py  test_auth_roles.py  test_evidence.py  test_jobs.py  test_local_static_worker.py  test_operator_console.py  test_ops.py  test_platform.py  test_release_api_contracts.py  test_reporting.py  test_scope.py  test_smoke_script.py  test_storage_integrity.py  test_version.py
