[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "intake-security"
version = "0.1.0"
description = "Policy-controlled security automation framework for authorized reverse engineering and assessment workflows."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "ChathurangaBW" }
]
dependencies = [
  "alembic>=1.13",
  "boto3>=1.34",
  "fastapi>=0.115",
  "httpx>=0.27",
  "psycopg[binary]>=3.2",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "pyyaml>=6.0",
  "sqlalchemy>=2.0",
  "typer>=0.12",
  "uvicorn>=0.30"
]

[project.optional-dependencies]
orchestration = [
  "langgraph>=0.2"
]
dev = [
  "pytest>=8.2",
  "ruff>=0.6",
  "mypy>=1.11"
]

[project.scripts]
intake = "intake.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/intake"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
