[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "intake-security"
version = "0.1.0"
description = "Policy-controlled security automation framework for authorized reverse engineering and assessment workflows."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "ChathurangaBW" }
]
keywords = ["security", "automation", "reverse-engineering", "evidence", "policy", "fastapi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: FastAPI",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Application Frameworks"
]
dependencies = [
  "alembic>=1.13",
  "boto3>=1.34",
  "fastapi>=0.115",
  "httpx>=0.27",
  "psycopg[binary]>=3.2",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0",
  "sqlalchemy>=2.0",
  "typer>=0.12",
  "uvicorn>=0.30"
]

[project.urls]
Homepage = "https://github.com/ChathurangaBW/Intake"
Documentation = "https://chathurangabw.github.io/Intake/"
Repository = "https://github.com/ChathurangaBW/Intake"
Issues = "https://github.com/ChathurangaBW/Intake/issues"
Packages = "https://github.com/ChathurangaBW/Intake/pkgs/container/intake"

[project.optional-dependencies]
orchestration = [
  "langgraph>=0.2"
]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11"
]

[project.scripts]
intake = "intake.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/intake"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
  "unit: fast unit tests for pure or narrow components",
  "contract: API and CLI contract tests using fakes/mocks",
  "integration: tests requiring external services such as Postgres, OPA, MinIO, or Docker Compose",
  "smoke: end-to-end smoke checks for a running app"
]
